--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-wc": "^0.2.24",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
@@ -21,12 +22,15 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.11",
     "jspdf": "^2.5.2",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.5.0",
     "react-dom": "^18.2.0",
+    "react-lottie": "^1.2.4",
     "recharts": "^2.13.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
