--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,17 +1,10 @@
-//{
-//  "extends": ["next/core-web-vitals", "next/typescript"],
-//  "rules": {
-//    "@typescript-eslint/no-explicit-any": "error"
-//  }
-//}
-
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/no-unescaped-entities": "off",
-    "@typescript-eslint/no-unused-vars": "warn",
-    "no-unused-vars": "warn"
+    "@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }],
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
   }
 }
